# InterstellarX

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: basic_frag.glsl  basic_vert.glsl
include/: CameraMovement.h  InterstellarX.h  Stopwatch.h  application.cpp  application.h  assets.h  camera.h  entity.h  interstellar_time.cpp  interstellar_time.h  material.h  mesh.h  mesh_primitives.h  renderer.h  scene.h  shader.h  transform.h  window.h
include/InterstellarX/: InterstellarX.h  application.cpp  application.h  assets.h  component.h  entity.cpp  entity.h  input.h  input_helper.cpp  input_helper.h  interstellar_time.h  material.h  mesh.h  mesh_primitives.h  monobehaviour.h  renderer.h  scene.h  shader.h  transform.h  window.h
include/InterstellarX/Components/: camera.cpp  camera.h  component.h  monobehaviour.h  rigidbody.h
src/: main.cpp
